ARROW-5195: [C++] Detect null strings in CSV string columns

By default, when converting CSV to a string column, all CSV values are considered valid.

Add an option so that strings such as "N/A" etc. are considered null.